--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "express-code-challenge",
+  "name": "library",
   "version": "1.0.0",
   "description": "A coding challenge to assess your ability to navigate an express server implementation.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Ankit Mahajan <ankitm.block@gmail.com>",
-  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0"
+  },
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.4"
-  }
+  },
+  "author": "fulltostack <fulltostack@gmail.com>",
+  "license": "ISC"
 }
