--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "dotenv": "^8.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "winston": "^2.4.4"
   },
   "author": "fulltostack <fulltostack@gmail.com>",
   "license": "ISC"
